# zkVM-test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.gpu  Dockerfile.gpu-runtime  README.md  deploy-akash-runtime.yaml  deploy-akash.yaml  deploy.yaml  docker-compose-secretvm.yaml  docker-compose.yml  env.example
.claude/: settings.local.json
.github/workflows/: docker-build-gpu-runtime.yml  docker-build-gpu.yml  docker-build-gpu.yml.disabled  docker-build-secretvm.yml
host/: Cargo.toml
host/src/: main.rs  randomx_vm.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: lib.rs  main.rs
methods/guest/src/randomx/: aes.rs  argon2.rs  blake2b.rs  config.rs  hash.rs  merkle.rs  mod.rs  program.rs  scratchpad.rs  softfloat.rs  vm.rs
methods/hash-chain/: Cargo.toml
methods/hash-chain/src/: main.rs
methods/phase1-cache/: Cargo.toml
methods/phase1-cache/src/: main.rs
methods/phase1a-cache-segment/: Cargo.toml
methods/phase1a-cache-segment/src/: main.rs
methods/phase2-program/: Cargo.toml
methods/phase2-program/src/: main.rs
methods/phase2-vm/: Cargo.toml
methods/phase2-vm/src/: main.rs
