[package]
name = "host"
version = "0.1.0"
edition = "2021"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
serde-big-array = "0.5"
hex = { workspace = true }
sysinfo = "0.31"
# For host-side cache computation (must match guest implementation)
argon2 = "0.5"
blake2 = "0.10"
