[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Pure-Rust crypto primitives for RandomX
# Blake2b is used for key derivation and final hashing
blake2 = { version = "0.10", default-features = false }

# Argon2d for cache initialization (required for real Monero verification)
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }

# libm provides math functions for no_std (sqrt, abs, etc.)
libm = "0.2"

# NOTE: We implement AES ourselves in randomx/aes.rs
# The aes crate requires std or has SIMD dependencies

[profile.release]
# Optimize for speed in the guest (RandomX is computationally intensive)
opt-level = 3
lto = true
