[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Pure-Rust crypto primitives for RandomX
# Blake2b is used for key derivation and final hashing
blake2 = { version = "0.10", default-features = false }

# Argon2d for cache initialization (required for real Monero verification)
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }

# NOTE: We implement soft-float in randomx/softfloat.rs for deterministic zkVM execution
# Hardware FPU operations are non-deterministic across platforms

# NOTE: We implement AES ourselves in randomx/aes.rs
# The aes crate requires std or has SIMD dependencies

[profile.release]
# Optimize for speed in the guest (RandomX is computationally intensive)
opt-level = 3
lto = true
