[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "phase1_cache"
path = "src/bin/phase1_cache.rs"

[[bin]]
name = "phase2_vm"
path = "src/bin/phase2_vm.rs"

# Keep original combined guest for reference/testing
[[bin]]
name = "guest"
path = "src/main.rs"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

# Pure-Rust crypto primitives for RandomX
# Blake2b is used for key derivation and final hashing
blake2 = { version = "0.10", default-features = false }

# Argon2d for cache initialization (required for real Monero verification)
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }

# Pure software IEEE 754 floating point - deterministic across all platforms
# Uses round-to-nearest-even only (rounding modes ignored for now)
softfloat = { version = "1", default-features = false }

# NOTE: We implement AES ourselves in randomx/aes.rs
# The aes crate requires std or has SIMD dependencies

[profile.release]
# Optimize for speed in the guest (RandomX is computationally intensive)
opt-level = 3
lto = true
