[package]
name = "hash-chain"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
# Use guest library for blake2b
guest = { path = "../guest" }

[profile.release]
opt-level = 3
lto = true
