[package]
name = "phase1a-cache-segment"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-big-array = { version = "0.5", default-features = false }
# Depend on the guest library for shared RandomX code
guest = { path = "../guest" }

[profile.release]
opt-level = 3
lto = true
