[package]
name = "phase2-vm"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
# Depend on the guest library for shared RandomX code
guest = { path = "../guest" }

[profile.release]
opt-level = 3
lto = true
